--- a/Kitty/Kitty.vcxproj.filters
+++ b/Kitty/Kitty.vcxproj.filters
@@ -28,6 +28,12 @@
     <Filter Include="Source Files\Slyvina\Units">
       <UniqueIdentifier>{c3f678c3-9aa5-401c-b1d0-0a911823404b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Slyvina\Kitty">
+      <UniqueIdentifier>{0df024d2-54d6-4ce9-81a3-fc37519bf039}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Slyvina\Kitty">
+      <UniqueIdentifier>{0b9f8639-41dd-46ac-855f-6a2fda48b01f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Libs\Units\Headers\SlyvSilly.hpp">
@@ -35,6 +41,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Libs\Units\Headers\SlyvString.hpp">
       <Filter>Header Files\Slyvina\Units</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Libs\Kitty\Headers\Kitty_High.hpp">
+      <Filter>Header Files\Slyvina\Kitty</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Libs\Kitty\Headers\High_Headers.hpp">
+      <Filter>Header Files\Slyvina\Kitty</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +79,72 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Libs\Units\Source\SlyvVolumes.cpp">
       <Filter>Source Files\Slyvina\Units</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\Kitty_High.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighCS.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighNIL.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighScyndi.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighBlitzMax.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighC.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighPascal.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighBrainfuck.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighGo.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighBlitzBasic.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighSASKIA.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighPython.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighJavaScript.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighWhiteSpace.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighJava.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighVisualBasic.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighCobra.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighHTML.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighXML.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighNeil.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighINI.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Libs\Kitty\Source\KittyHighBASIC.cpp">
+      <Filter>Source Files\Slyvina\Kitty</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
